src/pages/Logement/Logement.css
.logement {
    color: #ff6060;
}

.logementDescription {
    margin-top: 2.5rem;
    display: flex;
    justify-content: space-between;
}

.logementTitle {
    font-size: 2.25rem;
    font-weight: 500;
}

.logementLocate {
    font-size: 1.13rem;
    font-weight: 500;
    margin-top: 1rem;
}

.logementHostName {
    font-size: 1.13rem;
    font-weight: 500;
    line-height: 1.5;
}

.logementHostPicture {
    height: 64px;
    width: 64px;
    border-radius: 50px;
}

.logementTagsWrap {
    display: flex;
    flex-wrap: wrap;
    gap: 9px;
    margin-top: 10px;
    margin-bottom: 10px;
}

.logementTag {
    color: white;
    background-color: #ff6060;
    border-radius: 10px;
    min-width: 100px;
    text-align: center;
    font-size: 0.9rem;
    padding: 0.3rem 1rem;
    font-weight: 500;
}

.hostInfo {
    display: flex;
    align-items: center;
    width: 80%;
}

.rating {
    display: inline-flex;
    align-items: center;
    color: #ff6060;
    font-size: 35px;
}

.rating::before {
    content: "★★★★★";
    letter-spacing: 3px;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    background-image: linear-gradient(
        to right,
        #ff6060 0%,
        #ff6060 var(--rating),
        #e0e0e0 var(--rating),
        #e0e0e0
    );
}

.collapseContainer {
    margin-top: 1.5rem;
    display: flex;
    justify-content: space-between;
}

.collapseContainer > div {
    width: 46%;
}

.logement .dropdown-title {
    font-size: 18px;
    font-weight: 500;
}

.logement .dropdown-content {
    padding: 2rem 1.5rem;
    font-size: 18px;
}

.logement .dropdown-container {
    margin-bottom: 3rem;
}

@media only screen and (max-width: 800px) {
    .logementDescription {
        display: block;
        margin-top: 0rem;
    }

    .wrapHostRating {
        width: 100%;
        display: flex;
        flex-direction: row-reverse;
    }

    .logementTitle {
        font-size: 1.3rem;
        line-height: 1.5;
    }

    .logementLocate {
        margin-top: 0.5rem;
        font-size: 0.9rem;
    }

    .rating {
        width: 100%;
    }

    .rating::before {
        font-size: 25px;
    }

    .logementHostName {
        font-size: 0.9rem;
    }

    .hostInfo {
        width: initial;
        gap: 10px;
    }

    .collapseContainer {
        display: block;
    }

    .collapseContainer > div {
        width: 100%;
    }

    .collapseContainer > div:nth-child(2) {
        margin-top: -1.7rem;
    }

    .logement .carousel {
        height: 335px;
        margin-bottom: 1rem;
    }

    .logement .slideCount {
        display: none;
    }

    .logement .carousel_arrow {
        height: 24px;
    }

    .logement .dropdown-title {
        font-size: 0.9rem;
    }

    .logement .dropdown-content {
        font-size: 0.8rem;
        padding: 0.8rem 1rem;
    }
}

